Overflow issue on iOS

--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -13,7 +13,8 @@
 }
 
 html {
-	font-size: 62.5% 
+	font-size: 62.5%;
+	overflow-x: hidden;
 }
 
 body{
